# lib/db/src/schema/index.ts
@@ -3,3 +3,5 @@ export * from "./customers";
 export * from "./products";
 export * from "./expenses";
 export * from "./sales";
+export * from "./conversations";
+export * from "./messages";
